--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="#Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Products</a>
+                        <a class="nav-link" href="#products">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Testimonials</a>
+                        <a class="nav-link" href="#testimonials">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="#contactus">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero-section">
+    <section class="hero-section" id="Home">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -60,7 +60,7 @@
     </section>
 
     <!-- Features Section -->
-    <section class="features-section">
+    <section class="features-section" id="features">
         <div class="container">
             <h2>Features</h2>
             <div class="row">
@@ -91,7 +91,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="products-section">
+    <section class="products-section" id="products">
         <div class="container">
             <h2>Products</h2>
             <div class="row">
@@ -127,7 +127,7 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section class="testimonials-section">
+    <section class="testimonials-section" id="testimonials">
         <div class="container">
             <h2>Testimonials</h2>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -195,7 +195,7 @@
 
 
     <!-- Footer Section -->
-    <footer class="footer">
+    <footer class="footer" id="contactus">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
