--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.
                     </p>
                     <button type="button" class="btn btn-primary">Get Started</button>
-                    <button type="button" class="btn btn-outline-primary">Contact Us</button>
+                    <button type="button" class="btn btn-outline-primary"><a href="#contactus" style="text-decoration: none;">Contact Us</a></button>
                 </div>
                 <div class="col-md-6 text-center">
                     <img src="/images/img1.avif" alt="Illustration" class="illustration">
