added new feature

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1>WE MAKE YOUR IDEA'S <span>INTO REALITY</span></h1>
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.
                     </p>
-                    <button type="button" class="btn btn-primary">Get Started</button>
+                    <button type="button" class="btn btn-primary"><a href="#features" style="text-decoration: none;"> Get Started</a></button>
                     <button type="button" class="btn btn-outline-primary"><a href="#contactus" style="text-decoration: none;">Contact Us</a></button>
                 </div>
                 <div class="col-md-6 text-center">
