--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     <h1>WE MAKE YOUR IDEA'S <span>INTO REALITY</span></h1>
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.
                     </p>
-                    <button type="button" class="btn btn-primary"><a href="#features" style="text-decoration: none;color :white;"> Get Started</a></button>
+                    <a href="#features" class="btn btn-primary" style="text-decoration: none; color: white;">Get Started</a>
+
                     <button type="button" class="btn btn-outline-primary"><a href="#contactus" style="text-decoration: none; ">Contact Us</a></button>
                 </div>
                 <div class="col-md-6 text-center">
