--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
                     <h1>WE MAKE YOUR IDEA'S <span>INTO REALITY</span></h1>
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.
                     </p>
-                    <a href="#features" class="btn btn-primary" style="text-decoration: none; color: white;">Get Started</a>
+                    <a href="#features" class="btn btn-primary" style="text-decoration: none; color: white;">Get
+                        Started</a>
 
-                    <button type="button" class="btn btn-outline-primary"><a href="#contactus" style="text-decoration: none; ">Contact Us</a></button>
+                    <button type="button" class="btn btn-outline-primary"><a href="#contactus"
+                            style="text-decoration: none; ">Contact Us</a></button>
                 </div>
                 <div class="col-md-6 text-center">
                     <img src="/images/img1.avif" alt="Illustration" class="illustration">
@@ -129,50 +131,55 @@
 
     <!-- Testimonials Section -->
     <section class="testimonials-section" id="testimonials">
-        <div class="container">
-            <h2>Testimonials</h2>
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+        <div class="container mt-5">
+            <h2 class="text-center mb-4">TESTIMONIALS</h2>
+            <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner text-center">
                     <div class="carousel-item active">
-                        <p class="testimonial-text">"This is an amazing service! Totally recommend it to everyone."</p>
-                        <img src="https://via.placeholder.com/100" class="d-block mx-auto rounded-circle"
+
+                        <img src="/images/girl" class="d-block mx-auto rounded-circle"
                             alt="Client Photo">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                        </div>
+                        <p>Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus
+                            mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus risus risus,
+                            volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor eget rutrum.</p>
+                        <h5 class="text-success mt-4">PAULA WILSON</h5>
+                        <p class="text-muted">Media Analyst</p>
                     </div>
                     <div class="carousel-item">
-                        <p class="testimonial-text">"Absolutely fantastic! Great support and quality work."</p>
+
                         <img src="https://via.placeholder.com/100" class="d-block mx-auto rounded-circle"
                             alt="Client Photo">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                        </div>
+                        <p>Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus
+                            mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus risus risus,
+                            volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor eget rutrum.</p>
+                        <h5 class="text-success mt-4">PAULA WILSON</h5>
+                        <p class="text-muted">Media Analyst</p>
                     </div>
+                    <!-- Add more carousel-item divs here for additional testimonials -->
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                <!-- Carousel controls -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
         </div>
+        </div>
     </section>
 
     <!-- Contact Us Section -->
     <section class="contact-container">
-        
-            <h2>Contact Us</h2>
-            <div class="row">
+
+        <h2>Contact Us</h2>
+        <div class="row">
             <div class="col-md-6">
-                <img src="/images/images.png" alt="Illustration" >
+                <img src="/images/images.png" alt="Illustration">
             </div>
             <div class="col-md-6">
                 <form>
@@ -191,7 +198,7 @@
                 </form>
             </div>
         </div>
-        
+
     </section>
 
 
