--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Testimonials Section -->
     <section class="testimonials-section" id="testimonials">
         <div class="container mt-5">
-            <h2 class="text-center mb-4">TESTIMONIALS</h2>
+            <h2 class="text-center mb-4">Testimonials</h2>
             <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner text-center">
                     <div class="carousel-item active">
